syntax = "proto3";
package nicholasdotsol.duality.dex;

option go_package = "github.com/NicholasDotSol/duality/x/dex/types";
import "gogoproto/gogo.proto";


message Reserve0AndSharesType {
  
  string reserve0 = 1 [
      (gogoproto.moretags)   = "yaml:\"reserve0\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "reserve0"
  ]; 
  string totalShares = 2 [
      (gogoproto.moretags)   = "yaml:\"totalShares\"",
      (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
      (gogoproto.nullable)   = false,
      (gogoproto.jsontag) = "totalShares"
  ];  
}
